--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,5 @@ UnrealShootingGame/Saved/Logs/UnrealShootingGame-backup-2023.08.20-13.23.49.log
 UnrealShootingGame/Saved/Logs/UnrealShootingGame-backup-2023.08.19-13.54.45.log
 UnrealShootingGame/Saved/Config/CrashReportClient/UECC-Windows-E83FAD4742C1374686DD2B981988FEF3/CrashReportClient.ini
 UnrealShootingGame/Saved/Config/CrashReportClient/UECC-Windows-C3A38B0A4BBE454ADC885D8DE67019B0/CrashReportClient.ini
+UnrealShootingGame/Saved/Config/CrashReportClient/UECC-Windows-6CEB579E4EC33EE39E8C68B8086B876E/CrashReportClient.ini
+UnrealShootingGame/Saved/Logs/UnrealShootingGame-backup-2023.08.20-13.24.36.log
