--- a/.gitignore
+++ b/.gitignore
@@ -470,3 +470,11 @@ UnrealShootingGame/Saved/WorldPartition/StreamingGeneration-PIE-00002f78-2023.08
 UnrealShootingGame/Saved/WorldPartition/StreamingGeneration-PIE-000041d8-2023.08.26-22.03.14.log
 UnrealShootingGame/Saved/WorldPartition/StreamingGeneration-PIE-000041d8-2023.08.26-22.03.28.log
 UnrealShootingGame/Saved/WorldPartition/StreamingGeneration-PIE-000041d8-2023.08.26-22.05.07.log
+UnrealShootingGame/Saved/Config/CrashReportClient/UECC-Windows-5E8A61B64C00293676AFFAA22714EA5D/CrashReportClient.ini
+UnrealShootingGame/Saved/Config/CrashReportClient/UECC-Windows-6AAA738E42F3B244676CB09D8FB1466E/CrashReportClient.ini
+UnrealShootingGame/Saved/Logs/UnrealShootingGame-backup-2023.08.28-13.43.29.log
+UnrealShootingGame/.vs/UnrealShootingGame/v17/ipch/282e28331204cbd4.ipch
+UnrealShootingGame/.vs/UnrealShootingGame/FileContentIndex/d9384ca5-b0a1-4d53-a927-3f2d61095262.vsidx
+UnrealShootingGame/.vs/UnrealShootingGame/FileContentIndex/bd1529e0-b0c3-4eef-bead-93d60a39f018.vsidx
+UnrealShootingGame/.vs/UnrealShootingGame/FileContentIndex/1eb5c0eb-12ca-44f8-9a18-68f9c157c505.vsidx
+UnrealShootingGame/.vs/UnrealShootingGame/FileContentIndex/071bdf8e-d437-4ee6-8ff8-f734e7c0327c.vsidx
