--- a/UnrealShootingGame/Config/DefaultEngine.ini
+++ b/UnrealShootingGame/Config/DefaultEngine.ini
@@ -85,3 +85,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/OculusXRHMD.OculusXRHMDRuntimeSettings]
+HandTrackingFrequency=HIGH
+HandTrackingSupport=ControllersAndHands
+
